# Minix

./: index.html  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  window_ext.rs
src/css/: button.css  dropbox.css  taskview.css  theme.css  toolbox.css
src/views/: Button.tsx  Dialog.tsx  DropBox.tsx  Files.tsx  TaskItem.tsx  TaskView.tsx  ToolBox.tsx
